--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "cognesy/instructor-hub",
-  "version": "0.17.3",
+  "version": "0.17.5",
   "description": "CLI tool to work with Instructor PHP code examples and docs",
   "license": "MIT",
   "homepage": "https://instructorphp.com",
@@ -42,8 +42,12 @@
   "scripts": {
     "tests": "@php vendor/bin/pest",
     "phpstan": "@php vendor/bin/phpstan -c phpstan.neon",
-    "psalm": "@php vendor/bin/psalm"
+    "psalm": "@php vendor/bin/psalm",
+    "hub": "bin/ins-hub"
   },
+  "bin": [
+    "bin/ins-hub"
+  ],
   "config": {
     "allow-plugins": {
       "pestphp/pest-plugin": true
