--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
   },
   "require": {
     "php": "^8.2",
-    "cognesy/instructor-struct": "^1.1",
-    "cognesy/instructor-auxiliary": "^1.1",
+    "cognesy/instructor-struct": "dev-main",
+    "cognesy/instructor-auxiliary": "dev-main",
+    "cognesy/instructor-utils": "^1.1",
+    "cognesy/instructor-doctor": "dev-main",
     "toolkit/cli-utils": "^2.0",
     "cebe/markdown": "^1.2"
   },
